// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders without crashing 1`] = `
<li
  title="description"
>
  <b>
    Boil Size
    : 
  </b>
  20
   
  L
</li>
`;

exports[`renders without crashing on US units 1`] = `
<li
  title="description"
>
  <b>
    Boil Size
    : 
  </b>
  5.28
   
  gal
</li>
`;
